crates/ir/tests/snapshots/lower_test__stdlib__vec_empty.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__vec_empty

declare len: (Vec[b6]) -> Int
declare println: (m) -> Unit

fn main() -> Unit =
  let v0: Vec[v7] = make_vec()
  let v1: Int = call len(v0)
  let v2: Unit = call println(v1)
  v2
