crates/ir/tests/snapshots/lower_test__stdlib__vec_get.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__vec_get

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/vec/nth as nth(Vec[b8], Int): Option[b8]
declare nth: (Vec[b8], Int) -> Option[b8]
declare println: (s) -> Unit

fn main() -> Unit =
  let v0: Vec[Int] = make_vec(1, 2, 3)
  let v1: Option[Int] = call nth(v0, 0)
  switch v1 {
    0 (v2: Int) ->
      let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v4: Unit = call println(v3, v2)
      v4
    1 ->
      let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v6: Unit = call println(v5, 0)
      v6
  }
